feat: add tag removal option
